OmniTheme: add support for omni subtratum app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':substrate')
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
 }
